section 7, vid 30: article comments section

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -141,7 +141,7 @@
       "type": "link_list",
       "id": "menu",
       "label": "Useful links menu",
-      "default": "main-menu"
+      "default": "useful-menu"
     }
   ]
 }
